#2 setting up oidc client. Add axios authorize header to get data from secret page

--- a/Presentation/TaskManager.Web/Views/Ticket/Index.cshtml
+++ b/Presentation/TaskManager.Web/Views/Ticket/Index.cshtml
@@ -72,4 +72,11 @@
 <div></div>
 <button onclick="signIn()" >Sign in</button>
 
-<script src="~/sign-in.js"></script>
+<div>
+    <button onclick="callApi()">Call Police</button>
+</div>
+
+
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.11.5/oidc-client.min.js"></script>
+<script src="~/main.js"></script>
