--- a/Presentation/TaskManager.Web/Views/Home/SignIn.cshtml
+++ b/Presentation/TaskManager.Web/Views/Home/SignIn.cshtml
@@ -1,3 +1,10 @@
-﻿<button onclick="extractTokens()">Extract Tokens</button>
+﻿<script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.11.5/oidc-client.min.js"></script>
 
-<script src="~/sign-in-callback.js"></script>
+<script>
+	var userManager = new Oidc.UserManager();
+	userManager.signinCallback().then(res => {
+		console.log(res);
+
+		window.location.href = '/';
+	})
+</script>
